<?xml version="1.0"?>
<package format="2">
  <name>tesseract_serialization</name>
  <version>0.1.0</version>
  <description>Contains code for serializing Tesseract types</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Matthew Powelson</author>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>protobuf</depend>
  <depend>tesseract_common</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
